HISTORY of collective.pwexpiry
==============================

0.9 (unreleased)
----------------

- Update german translations.
  [pcdummy]

- Do not exipre passwords if `validity_period` is set to 0
  [fRiSi]

- Add password history check (not in last x passwords).
  [pcdummy]

- Enable the example_validator only when theres a browserlayer.
  [pcdummy]

- Add a skins layer and remove the confusing > 5 chars message from
  pwreset_form.
  [pcdummy]

- Update german translations and translate example_validator.
  [pcdummy]


0.8.1 (2015-05-06)
------------------

- Template typo
  [frapell]

- Update italian translation
  [giacomos]


0.8 (2015-04-20)
----------------

- Update translations
  [frapell]

- Improve control panel tool to allow admins to unlock accounts
  [frapell]


0.7 (2015-03-25)
----------------

- Ignore Managers from password expiring
  [frapell]

- Bugfix: If a wrong password was entered that goes over the limit, do not
  add a response header. Only do it when entering correctly
  [frapell]

- When comparing dates, make sure both are timezone aware
  [frapell]

- Ignore case when checking for name and username in password.
  [enfold-josh]

- Change script to accept a path and use traversal to get plone site since it
  may not always be in the application root.
  [enfold-josh]

- Redirect to $portal_url/mail_password_form instead of just /mail_password_form
  [enfold-josh]

- Alter notification email to support days <= 0.
  [enfold-josh]


0.6 (2015-03-13)
----------------

- Use a friendlier date format for the control panel
  [frapell]


0.5 (2014-11-28)
----------------

- Add i18n and italian translation
  [giacomos]

- No need to include 'control panel' in the control panel title
  [frapell]


0.4 (2014-09-11)
----------------

- Add member properties, registry keys, events subscribers, and a PAS plugin
  to allow blocking a user if he enters too many incorrect passwords.
  [frapell]
