@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+  <javascript id="++resource++collective.pwexpiry.fix_login_popup.js"
+    cacheable="True" compression="safe" cookable="True" enabled="True"
+    bundle="default" inline="False"
+    insert-after="popupforms.js" />
+</object>
